@@ -39,6 +39,18 @@
 				<Registry Root='HKLM' Key='SOFTWARE\Microsoft\VisualStudio\9.0\Packages\{9f4f10d0-81ad-4308-a398-ba7741f3f7e2}' Id='g1e3867be_8561_c838_ac6e_8c608d2a1bdd' Name='ProductName' Value='ActiveWriter' Type='string' />
 				<Registry Root='HKLM' Key='SOFTWARE\Microsoft\VisualStudio\9.0\Packages\{9f4f10d0-81ad-4308-a398-ba7741f3f7e2}' Id='g8c496229_7ab7_6937_90a7_92e3e5e5dfd8' Name='CompanyName' Value='altinoren.com' Type='string' />
 				<Registry Root='HKLM' Key='SOFTWARE\Microsoft\VisualStudio\9.0\Menus' Id='gfd1b1a09_d2f9_4335_aee6_5379ab5491fd' Name='{9f4f10d0-81ad-4308-a398-ba7741f3f7e2}' Value=', 1000.ctmenu, 4' Type='string' />
+				<Registry Root='HKLM' Key='SOFTWARE\Microsoft\VisualStudio\9.0\ToolsOptionsPages\ActiveWriter' Id='g84d11094_4207_9e3f_895b_a3347df0e839' Type='string' Value='#101' />
+				<Registry Root='HKLM' Key='SOFTWARE\Microsoft\VisualStudio\9.0\ToolsOptionsPages\ActiveWriter' Id='gcd031f2f_975f_d931_9406_976c8e6170ad' Name='Package' Value='{9f4f10d0-81ad-4308-a398-ba7741f3f7e2}' Type='string' />
+				<Registry Root='HKLM' Key='SOFTWARE\Microsoft\VisualStudio\9.0\ToolsOptionsPages\ActiveWriter\General' Id='g9af44968_1a22_113d_b351_48d90ce86ff4' Type='string' Value='#120' />
+				<Registry Root='HKLM' Key='SOFTWARE\Microsoft\VisualStudio\9.0\ToolsOptionsPages\ActiveWriter\General' Id='g5fa347d1_9f4e_4f33_bd02_cdb3396f1bc8' Name='Package' Value='{9f4f10d0-81ad-4308-a398-ba7741f3f7e2}' Type='string' />
+				<Registry Root='HKLM' Key='SOFTWARE\Microsoft\VisualStudio\9.0\ToolsOptionsPages\ActiveWriter\General' Id='gbd04b53f_f26c_3339_a646_e8fa87c8b11d' Name='Page' Value='{25a08036-5c86-456e-a1fc-e91fd94484d2}' Type='string' />
+				<Registry Root='HKLM' Key='SOFTWARE\Microsoft\VisualStudio\9.0\AutomationProperties\ActiveWriter\General' Id='g0a859560_3432_7535_8c46_3489795ba640' Name='Name' Value='ActiveWriter.General' Type='string' />
+				<Registry Root='HKLM' Key='SOFTWARE\Microsoft\VisualStudio\9.0\AutomationProperties\ActiveWriter\General' Id='g687d6036_93f9_c138_a8e4_f3937bec965e' Name='Package' Value='{9f4f10d0-81ad-4308-a398-ba7741f3f7e2}' Type='string' />
+				<Registry Root='HKLM' Key='SOFTWARE\Microsoft\VisualStudio\9.0\UserSettings\ActiveWriter_General' Id='gd44ee6d8_21ba_a93b_91db_234d4499a7f3' Type='string' Value='120' />
+				<Registry Root='HKLM' Key='SOFTWARE\Microsoft\VisualStudio\9.0\UserSettings\ActiveWriter_General' Id='g3d2955fd_377f_823e_8e93_8f130757fed3' Name='Package' Value='{9f4f10d0-81ad-4308-a398-ba7741f3f7e2}' Type='string' />
+				<Registry Root='HKLM' Key='SOFTWARE\Microsoft\VisualStudio\9.0\UserSettings\ActiveWriter_General' Id='g8d748005_a007_aa37_9b30_d8f1e232f3db' Name='Category' Value='{25a08036-5c86-456e-a1fc-e91fd94484d2}' Type='string' />
+				<Registry Root='HKLM' Key='SOFTWARE\Microsoft\VisualStudio\9.0\UserSettings\ActiveWriter_General' Id='gd0f36830_f687_c532_857c_bdf7b4ab7ae4' Name='ToolsOptionsPath' Value='ActiveWriter' Type='string' />
+				<Registry Root='HKLM' Key='SOFTWARE\Microsoft\VisualStudio\9.0\UserSettings\ActiveWriter_General' Id='g7e5eeccd_0c0f_6a31_8ea6_647b9c63f33d' Name='VSSettingsMigration' Value='0' Type='integer' />
 				<Registry Root='HKLM' Key='SOFTWARE\Microsoft\VisualStudio\9.0\ToolWindows\{762a1a9f-b314-4480-8df1-227a3166ee9c}' Id='g2998c71e_802c_f138_8937_406925d4a740' Type='string' Value='{9f4f10d0-81ad-4308-a398-ba7741f3f7e2}' />
 				<Registry Root='HKLM' Key='SOFTWARE\Microsoft\VisualStudio\9.0\ToolWindows\{762a1a9f-b314-4480-8df1-227a3166ee9c}' Id='g2cc92a69_50d2_5139_8b0c_8d6c46766cac' Name='Name' Value='Altinoren.ActiveWriter.ActiveWriterExplorerToolWindow' Type='string' />
 				<Registry Root='HKLM' Key='SOFTWARE\Microsoft\VisualStudio\9.0\ToolWindows\{762a1a9f-b314-4480-8df1-227a3166ee9c}' Id='g32155198_f327_df32_b9e0_c56669507eeb' Name='Orientation' Value='Right' Type='string' />
